--- a/style.css
+++ b/style.css
@@ -77,14 +77,14 @@
     border: 2px solid #458FF6;
 }
 .header2{
-width: 1180px;
-height: 1105.74px;
+    width: 1180px;
+    height: 1105.74px;
 }
 .header-content1 h4{
-text-align: center;
-font-size: 35px;
-font-weight: 700;
-line-height: 56px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 56px;
 }
 .header-content1 p{
     text-align: center;
@@ -94,11 +94,11 @@ line-height: 56px;
     margin-right: 11px;
 }
 .card{
-background-color:#E7E7E7;
-width: 380px;
-height: 380px;
-border-radius: 20px;
-transition: all 0.3s;
+    background-color:#E7E7E7;
+    width: 380px;
+    height: 380px;
+    border-radius: 20px;
+    transition: all 0.3s;
 }
 .kartocki{
     display: flex;
@@ -108,18 +108,17 @@ transition: all 0.3s;
     margin-top: 36px;
 }
 .card img{
-
-margin: 68px 244px 10px 41px;
+    margin: 68px 244px 10px 41px;
 }
 .card p{
-color: #7D7987;
-font-size: 16px;
-font-weight: 300;
-line-height: 28px;
-margin: 1px 58px 28px 41px;
+    color: #7D7987;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    margin: 1px 58px 28px 41px;
 }
 .card h2{
-margin: 30px 170px 10px 41px;
+    margin: 30px 170px 10px 41px;
 }
 .img1{
     width: 96px;
@@ -200,11 +199,11 @@ h1{
     
 }
 .section{
-width:1440px;
-height: 469.15px;
-display:flex;
-justify-content: space-between;
-margin: 75px 130px 0px 130px;
+    width:1440px;
+    height: 469.15px;
+    display:flex;
+    justify-content: space-between;
+    margin: 75px 130px 0px 130px;
 }
 .b2{
     color: #458FF6;
@@ -225,16 +224,16 @@ margin: 75px 130px 0px 130px;
     color: white; 
 }
 .cart{
-width: 380px;
-height: 516px;
-background-color: #f4efef;
+    width: 380px;
+    height: 516px;
+    background-color: #f4efef;
 }
 .div2{
-width: 1180px;
-height: 782.74px;
-margin-top: 152px;
-margin: 152px 130px 230px 130px;
-}
+    width: 1180px;
+    height: 782.74px;
+    margin-top: 152px;
+    margin: 152px 130px 230px 130px;
+    }
 .hh2{
     font-family: Mulish;
     font-size: 36px;
@@ -244,51 +243,96 @@ margin: 152px 130px 230px 130px;
     margin-bottom: 109px;
 }
 .kartochki{
-width: 1180px;
-height:516pxpx;
-display: flex;
-justify-content: space-between;
-
+    width: 1180px;
+    height:516pxpx;
+    display: flex;
+    justify-content: space-between;
 }
 .cart img{
-width: 380px;
-height: 240px;
-border-radius: 20px;
+    width: 380px;
+    height: 240px;
+    border-radius: 20px;
 }
 h3{
-font-family: Mulish;
-font-size: 21px;
-font-weight: 700;
-line-height: 32px;
-margin: 30px 99px 10px 30px;
+    font-family: Mulish;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 32px;
+    margin: 30px 99px 10px 30px;
 }
 .p2{
-font-family: Mulish;
-font-size: 16px;
-font-weight: 300;
-line-height: 28px;
-color: #7D7987;
-margin: 10px 84px 18px 30px;
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    color: #7D7987;
+    margin: 10px 84px 18px 30px;
 }
 .p1{
-color: #4089ED;
-font-family: Mulish;
-font-size: 17px;
-font-weight: 600;
-line-height: 28px;
-margin: 18px 263px 37px 30px;
+    color: #4089ED;
+    font-family: Mulish;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 18px 263px 37px 30px;
 }
 .p1::after{
     content: " ->";
     color: #4089ED;
 }
 .footer{
-width: 1600px;
-height: 432px;
-background-color: #4089ED;
+    width: 1600px;
+    height: 432px;
+    background-color: #5A98F2;
+    display: flex;
+    justify-content: space-between;
+    padding: 159px 220px 131px 200px;
 }
-.footer img{
-    width: 1180px;
+.f1{
+    width: 386px;
     height: 142px;
-    margin: 159px 95px 131px 165px;
 }
+.f2{
+    width: 97px;
+    height: 101px;
+}
+.f3{
+    width: 84px;
+    height: 101px;
+}
+.f4{
+    width: 132px;
+    height: 101px;
+}
+.f1 p{
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 28px;
+    color: white;
+    margin-top: 17px;
+}
+.f1 img{
+    width: 170px;
+    height: 41px;
+}
+.footer h4{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 25.1px;
+    color: white;
+}
+.f2p{
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 22.59px;
+    margin-top: 20px;
+    color: white;
+}
+.fp{
+    color: white;
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 22.59px;
+}
+
